[package]
name = "anim"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.0" }
bevy-inspector-egui = { version = "0.28.0" }
bevy_hanabi = { version = "0.14" }
avian3d = { git = "https://github.com/Jondolf/avian.git", ref = "main" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
